--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 
     <!-- オリジナルマーカー -->
-    <a-marker preset='custom' type='pattern' url='pattern-logo.patt'>
+    <a-marker preset='custom' type='pattern' url='./pattern-logos.patt'>
         <a-sphere scale=".25 .25 .25" position="0 .5 0" color="#f00">
             <a-animation attribute="position" to="0 1 0" direction="alternate" dur="2000" repeat="indefinite">
             </a-animation>
