--- a/index.html
+++ b/index.html
@@ -1,31 +1,48 @@
-<!DOCTYPE html>
+<html lang="JP">
 <head>
-    <script src="https://aframe.io/releases/0.8.2/aframe.min.js"></script>
+    <!--省略-->
+
+    <!-- A-Frameの読み込み -->
+    <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
+
+    <!-- AR.jsの読み込み -->
     <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.2/aframe/build/aframe-ar.js"></script>
+
+    <!-- aframe-extrasの読み込み(glTFのアニメーション再生のため) -->
+    <script src="https://cdn.rawgit.com/donmccurdy/aframe-extras/v5.0.0/dist/aframe-extras.min.js"></script>
+
+    <!--省略-->
 </head>
-<body style='margin: 0; overflow: hidden;'>
+<body>
 
-<a-scene embedded arjs="debugUIEnabled:false;">
+<!-- A-Frameのコードここから -->
+<a-scene embedded arjs="debugUIEnabled: false;" renderer="gammaOutput: true;" vr-mode-ui="enabled:false" >
 
-    <!-- hiroマーカー -->
-<!--    <a-marker preset="hiro">-->
-<!--        <a-sphere scale=".25 .25 .25" position="0 .5 0" color="#111">-->
-<!--            <a-animation attribute="position" to="0 1 0" direction="alternate" dur="2000" repeat="indefinite">-->
-<!--            </a-animation>-->
-<!--        </a-sphere>-->
-<!--    </a-marker>-->
+    <!-- オブジェクトの読み込みここから -->
+    <a-assets>
+        <a-asset-item id="model" src="./text.gltf"></a-asset-item>
+    </a-assets>
+    <!-- オブジェクトの読み込みここまで -->
 
+    <!-- ライトの設定ここから -->
+    <a-light type="directional" color="#FFF" intensity="0.5" position="-1 1 2"></a-light>
+    <a-light type="ambient" color="#FFF"></a-light>
+    <!-- ライトの設定ここまで -->
 
-    <!-- オリジナルマーカー -->
-    <a-marker preset='custom' type='pattern' url='./pattern-logos.patt'>
-        <a-sphere scale=".25 .25 .25" position="0 .5 0" color="#f00">
-            <a-animation attribute="position" to="0 1 0" direction="alternate" dur="2000" repeat="indefinite">
-            </a-animation>
-        </a-sphere>
+    <!-- マーカーの上に表示させるモデルの設定ここから -->
+    <a-marker preset="custom" type="pattern" url="./pattern-logos.patt">
+        <a-entity gltf-model="#model" position="0 0 0" scale="0.5 0.5 0.5" rotation="0 0 0" animation-mixer>
+            <a-animation  attribute="rotation" to="0 360 0" dur="7000" repeat="indefinite" easing="linear"></a-animation>
+        </a-entity>
     </a-marker>
+    <!-- マーカーの上に表示させるモデルの設定ここまで -->
 
-
+    <!-- カメラの設定ここから -->
     <a-entity camera></a-entity>
+    <!-- カメラの設定ここまで -->
+
 </a-scene>
+<!-- A-Frameのコードここまで -->
+
 </body>
 </html>
